src/frontEnd/IR/utils/ChartParser/src/main/java/edu/uiowa/chart/state/antlr/StateLabel.g4
/*
 * This file is part of CoCoSim.
 * Copyright (C) 2017-2018  The University of Iowa
 */
 
 /** 
 * @author Mudathir Mahgoub
 */
 
grammar StateLabel;

// parser rules

stateLabel : stateName '\r'? '\n'* actions?;

stateName : Identifier '/'?;

actions : (action)+ ;

action : actionType (',' actionType)*  ':'  actionBody;

actionType: Entry
            | During
            | Exit
            | Bind
            | On Identifier
            | On After '(' Number ',' Identifier ')'
            | On Before '(' Number ',' Identifier ')'
            | On At '(' Number ',' Identifier ')'
            | On Every '(' Number ',' Identifier ')'
            ;

actionBody: (.| Array | '\r'? '\n')*? ;

// lexer rules

Entry : 'entry' | 'en' ;

During : 'during' | 'du' ;

Exit : 'exit' | 'ex' ;

Bind : 'bind' ;

On : 'on' ;

After : 'after' ;

Before : 'before' ;

At : 'at' ;

Every : 'every' ;

Identifier : IdentifierLetter (IdentifierLetter | Digit)* ;

IdentifierLetter : 'a'..'z'|'A'..'Z'|'_' ;

Number : Integer | Float ;

Integer : Digit+ ;

Float   : Digit+ '.' Digit*
          | '.' Digit+ ;

Digit : '0'..'9' ;

LineComment : '%' .*? '\n' -> skip ;

Array: '[' (.| '\r'? '\n')*? ']';

WhiteSpace : [ \t\r]+ -> skip ;

AnyCharacter : . ;
